# ChatPete

./: Cargo.toml  LICENSE
src/: discord.rs  main.rs
