[package]
name = "chat_pete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
openai-api-rs = "4.0.8"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
shlex = "1.3.0"
anyhow = "1.0"
unidecode = "0.3.0"
